<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgGray">

    <!-- Toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/red"
        android:padding="10dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"

            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/back"
            android:src="@drawable/outline_arrow_back_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="MATCH SCORING"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Team Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="30dp">

        <!-- Team A -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/box_background"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgTeamA"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/team_a_logo"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:text="@string/team_a"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvScoreA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_margin="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPlusA"
                    style="@style/ScoreButton"
                    android:layout_margin="10dp"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/btnMinusA"
                    style="@style/ScoreButton"
                    android:layout_margin="10dp"
                    android:text="@string/minus" />


            </LinearLayout>
            <Button
                android:id="@+id/btnTimeoutTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeout_team_a"
                android:backgroundTint="@color/timeout_button"
                android:textColor="@color/black"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <!-- VS -->
        <TextView
            android:text="@string/vs"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <!-- Team B -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/box_background"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgTeamB"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/team_b_logo"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tvTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/team_b"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvScoreB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_margin="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPlusB"
                    style="@style/ScoreButton"
                    android:layout_margin="10dp"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/btnMinusB"
                    style="@style/ScoreButton"
                    android:layout_margin="10dp"
                    android:text="@string/minus" />
            </LinearLayout>


                <Button
                    android:id="@+id/btnTimeoutTeamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeout_team_b"
                    android:backgroundTint="@color/timeout_button"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </LinearLayout>



    <!-- Set Indicators -->
    <LinearLayout
        android:id="@+id/setContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@drawable/set_incomplete" />

        <TextView
            android:id="@+id/set2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@drawable/set_incomplete" />

        <TextView
            android:id="@+id/set3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@drawable/set_incomplete" />

        <TextView
            android:id="@+id/set4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@drawable/set_incomplete" />

        <TextView
            android:id="@+id/set5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:background="@drawable/set_incomplete" />
    </LinearLayout>
    <!-- Set Indicators -->
    <LinearLayout
        android:id="@+id/setContainerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/set_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/set_1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:visibility="visible"

            />

        <TextView
            android:id="@+id/set_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/set_2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/set_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/set_3"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/set_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/set_4"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/set_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/set_5"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:visibility="visible"
            />
    </LinearLayout>


    <!-- Next Set Button -->
    <Button
        android:id="@+id/btnNextSet"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/color_accent"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:text="@string/next_set"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</LinearLayout>
