<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/red"
        android:padding="10dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/back"
            android:src="@drawable/outline_arrow_back_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="CREATE MATCH"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Match Information -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_information"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp">

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="0"
            android:hint="@string/date"
            android:drawableEnd="@drawable/date"
            android:focusable="false"
            android:inputType="none" />

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints="0"
            android:hint="@string/time"
            android:drawableEnd="@drawable/time"
            android:focusable="false"
            android:inputType="none"/>
    </LinearLayout>

    <!-- Teams -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <!-- Team 1 -->
        <LinearLayout
            android:id="@+id/team1Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/edittext_background">

            <ImageView
                android:id="@+id/team1Logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/logo"
                android:contentDescription="Team 1 Logo"
                android:visibility="gone"/>

            <Button
                android:id="@+id/buttonTeam1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Add Team 1"
                android:backgroundTint="@color/darkGray"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/vs"
            android:textStyle="bold"
            android:textSize="16sp" />

        <!-- Team 2 -->
        <LinearLayout
            android:id="@+id/team2Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_background">

            <ImageView
                android:id="@+id/team2Logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/logo"
                android:visibility="gone"
                android:contentDescription="Team 2 Logo" />

            <Button
                android:id="@+id/buttonTeam2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Add Team 2"
                android:backgroundTint="@color/darkGray"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Match Rules -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_rules"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/darkGray"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_rule"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="@color/textBlack"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp" />

    <!-- Create Match Button -->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/box_background"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_best_of"
            android:textColor="@color/darkGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_points_set"
            android:textColor="@color/darkGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_points_tiebreak"
            android:textColor="@color/darkGray" />
    </LinearLayout>

    <Button
        android:id="@+id/createMatchButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightGray"
        android:enabled="false"
        android:layout_marginTop="40dp"
        android:text="@string/create_match"
        android:textColor="@color/black"
        android:textSize="16sp"/>

</LinearLayout>
